# solveMPC

./: .gitignore  CMakeLists.txt  README.md
config/: MPC_API.json  Serial_Port.json
include/: ModelPredictiveControlAPI.h  SerialPort.h  solveMPC.h  solver.h
src/: ModelPredictiveControlAPI.cpp  SerialPort.cpp  solveMPC.cpp  solver.cpp
